Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16813

sanity-flr/42 fails due to LU-16518

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      LU-16518 introduced this change:

      @@ -2942,7 +2942,7 @@ int llapi_mirror_resync_many(int fd, struct llapi_layout *layout,
                      return -rc;
       
              while (pos < end) {
      -               uint64_t mirror_end;
      +               uint64_t mirror_end = LUSTRE_EOF;
      

      and this breaks sanity-flr/42:

      == sanity-flr test 42: lfs mirror verify ================= 07:18:32 (1683703112)
      ..
      lfs mirror verify: chunk [0x400000, 0x600000) has different checksum value on mirror 2 and mirror 4.
      CRC-32 checksum value for chunk [0x600000, 0xa00000):
      Mirror 2:	0x1f8ad0d8
      Mirror 4:	0x18975bf9
      
      lfs mirror verify: chunk [0x600000, 0x800000) has different checksum value on mirror 2 and mirror 4.
      CRC-32 checksum value for chunk [0x800000, 0xc00000):
      Mirror 2:	0x4649ddde
      Mirror 4:	0x6d648e1d
      
      lfs mirror verify: chunk [0x800000, 0xa00000) has different checksum value on mirror 2 and mirror 4.
      CRC-32 checksum value for chunk [0xa00000, 0xe00000):
      Mirror 2:	0xf6c7f2c4
      Mirror 4:	0xddeaa107
      
      lfs mirror verify: chunk [0xa00000, 0x1000000) has different checksum value on mirror 2 and mirror 4.
      lfs mirror verify: '/mnt/lustre/d42.sanity-flr/f42.sanity-flr-1' chunk [0x1000000, 0xffffffffffffffff) exceeds file size 0xa00002: skipped
      lfs mirror verify: chunk [0x400000, 0x600000) has different checksum value on mirror 1 and mirror 2.
       sanity-flr test_42: @@@@@@ FAIL: verify /mnt/lustre/d42.sanity-flr/f42.sanity-flr-1 with mirror 1 and 2 should succeed 
        Trace dump:
        = ./../tests/test-framework.sh:6597:error()
        = sanity-flr.sh:2023:test_42()
        = ./../tests/test-framework.sh:6937:run_one()
        = ./../tests/test-framework.sh:6986:run_one_logged()
        = ./../tests/test-framework.sh:6808:run_test()
        = sanity-flr.sh:2042:main()
      Dumping lctl log to /tmp/ltest-logs/sanity-flr.test_42.*.1683703116.log
      Dumping logs only on local client.
      FAIL 42 (4s)
      

            timday Tim Day
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: