LU-16813 utils: move mirror_end initialization

Move initialization for mirror_end variable in
llapi_mirror_resync_many(), otherwise lfs mirror resync
may fail since mirror_end gets reset on each pass of
the loop.

Fixes: b0297a1056 ("LU-16518 lnet: fix clang build errors")
Test-Parameters: testlist=sanity-flr env=ONLY=42,ONLY_REPEAT=100
Signed-off-by: Timothy Day <timday@amazon.com>
Change-Id: I4edc078cd6e30d7a0ad84383b55b63b885a34d4b
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/50919
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>