lustre/utils/liblustreapi_layout.c
@@ -2932,6 +2932,7 @@ int llapi_mirror_resync_many(int fd, struct llapi_layout *layout,
 	void *buf;
 	uint64_t pos = start;
 	uint64_t data_off = pos, data_end = pos;
+	uint64_t mirror_end = LUSTRE_EOF;
 	uint32_t src = 0;
 	int i;
 	int rc;
@@ -2942,7 +2943,6 @@ int llapi_mirror_resync_many(int fd, struct llapi_layout *layout,
 		return -rc;
 
 	while (pos < end) {
-		uint64_t mirror_end = LUSTRE_EOF;
 		ssize_t bytes_read;
 		size_t to_read;
 		size_t to_write;
